fixes search input text alignment, closes #100

--- a/assets/sass/partials/_main.scss
+++ b/assets/sass/partials/_main.scss
@@ -645,7 +645,7 @@ textarea {
 .search-form {
 	input {
 		height: 1.5em;
-		padding: 16px 32px 16px 8px;
+		padding: 8px 40px 8px 8px;
 		background: {
 			image: image-url('search.png');
 			position: 95% 50%;
